--- a/notebooks/visualize.ipynb
+++ b/notebooks/visualize.ipynb
@@ -13,6 +13,7 @@
     "import sys\n",
     "import torch\n",
     "import numpy as np\n",
+    "from pdf2image import convert_from_path\n",
     "from PIL import Image\n",
     "\n",
     "sys.path.extend([\"../src/table_detr/detr\", \"../src/table_detr/src\"])\n",
@@ -60,13 +61,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "paths = [\n",
-    "    \"../data/1.jpg\",\n",
-    "]\n",
+    "# pdf\n",
+    "path = \"../data/ExampleTable.pdf\"\n",
+    "images = convert_from_path(path, dpi=300)\n",
     "\n",
-    "for path in paths:\n",
-    "    img = Image.open(path).convert(\"RGB\")\n",
-    "    \n",
+    "for img in images:\n",
     "    pred_labels, pred_scores, pred_bboxes = predict(detection_preprocessor, detection_model, img)\n",
     "    pred_tables = select_table_predictions(pred_labels, pred_scores, pred_bboxes)\n",
     "    \n",
