--- a/notebooks/visualize.ipynb
+++ b/notebooks/visualize.ipynb
@@ -13,14 +13,18 @@
     "import sys\n",
     "import torch\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from pdf2image import convert_from_path\n",
     "\n",
     "sys.path.extend([\"../src/table_detr/detr\", \"../src/table_detr/src\"])\n",
     "from app.inference import (\n",
+    "    enlarge_bbox,\n",
     "    detect_text, \n",
     "    load_artifacts,\n",
-    "    objects_to_cells, \n",
+    "    objects_to_cells,\n",
+    "    pad_image, \n",
     "    predict, \n",
+    "    reconstruct_table,\n",
     "    select_structure_predictions, \n",
     "    select_table_predictions,     \n",
     "    structure_class_map,\n",
@@ -60,7 +64,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pdf\n",
     "path = \"../data/ExampleTable.pdf\"\n",
     "images = convert_from_path(path, dpi=300)\n",
     "\n",
@@ -71,10 +74,8 @@
     "    visualize_bbox(img, pred_tables, \"detection\")\n",
     "    \n",
     "    for pred in pred_tables:\n",
-    "        bbox = pred[\"bbox\"]\n",
-    "        #table_img = img.crop([bbox[0] - 50, bbox[1] - 50, bbox[2] + 50, bbox[3] + 50])\n",
-    "        table_img = img.crop(bbox)\n",
-    "\n",
+    "        table_img = pad_image(img).crop(enlarge_bbox(pred[\"bbox\"]))\n",
+    "        \n",
     "        tokens = detect_text(table_img)\n",
     "\n",
     "        pred_labels, pred_scores, pred_bboxes = predict(structure_preprocessor, structure_model, table_img)\n",
@@ -92,7 +93,9 @@
     "            structure_class_map,\n",
     "        )\n",
     "        \n",
-    "        visualize_postprocessed_cell(table_img, pred_cells)"
+    "        visualize_postprocessed_cell(table_img, pred_cells)\n",
+    "        \n",
+    "        display(pd.read_json(reconstruct_table(pred_cells)))"
    ]
   },
   {
